--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -7,12 +7,14 @@ Host xvzc.github.com
   ForwardAgent yes
   IdentitiesOnly yes
   IdentityFile ~/.ssh/xvzc.pub
+  IdentityAgent "~/.1password/agent.sock"
 
 Host kwanghoo93.github.com
 	HostName github.com
   ForwardAgent yes
   IdentitiesOnly yes
   IdentityFile ~/.ssh/kwanghoo93.pub
+  IdentityAgent "~/.1password/agent.sock"
 
 Match Host * exec "test -z $SSH_CONNECTION"
   IdentityAgent "~/.1password/agent.sock"
