--- a/.dotfiles/.config/tmux/tmux.conf
+++ b/.dotfiles/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
-source-file ~/.config/tmux/tmux.bindkey.conf
-source-file ~/.config/tmux/tmux.options.conf
-source-file ~/.config/tmux/tmux.style.conf
+source-file ~/.config/tmux/bindkey.conf
+source-file ~/.config/tmux/options.conf
+source-file ~/.config/tmux/style.conf
 
 # List of plugins
 # set -g @plugin 'tmux-plugins/tpm'
