--- a/.dotfiles/.config/tmux/bindkey.conf
+++ b/.dotfiles/.config/tmux/bindkey.conf
@@ -1,3 +1,5 @@
+# vim:filetype=tmux:tw=80:et
+
 unbind-key C-c
 unbind-key C-b
 
@@ -6,6 +8,8 @@ set-option -g prefix C-a
 unbind-key n
 unbind-key s
 unbind-key p
+unbind-key C-Tab
+unbind-key C-S-Tab
 
 unbind -T copy-mode-vi Enter
 
@@ -13,12 +17,6 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi escape send-keys -X cancel
-
-bind-key - split-window -v -c "#{pane_current_path}"
-bind-key _ split-window -h -c "#{pane_current_path}"
-
-# bind-key - split-window -v
-# bind-key _ split-window -h
 
 bind-key ! set-window-option synchronize-panes
 
@@ -44,8 +42,8 @@ bind -r L resize-pane -R 1
 bind -r C-n next-window
 bind -r C-p previous-window
 
-bind - split-window -v -c "#{pane_current_path}"
-bind _ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "$HOME"
+bind _ split-window -h -c "$HOME"
 
 bind c run-shell -b "~/.scripts/tmux/new-window"
 bind v run-shell -b "~/.scripts/tmux/new-nvim-buffer"
