--- a/dotfiles/config/wezterm/colors/miami.toml
+++ b/dotfiles/config/wezterm/colors/miami.toml
@@ -3,19 +3,19 @@ ansi = [
   "#2b2b2b", # black           (30)
   "#db5a53", # red             (31)
   "#71d46e", # green           (32)
-  "#ffb152", # yellow          (33)
+  "#ffba52", # yellow          (33)
   "#90acfc", # blue            (34)
-  "#b294bb", # magenta         (35)
+  "#c28ad1", # magenta         (35)
   "#7accbd", # cyan            (36)
-  "#d1d1d1", # white           (37)
+  "#c4c4c4", # white           (37)
 ]
 
 brights = [
   "#919191", # bright black    (90)
   "#ff9999", # bright red      (91)
   "#d0e354", # bright green    (92)
-  "#fccb44", # bright yellow   (93)
-  "#9cc2f7", # bright blue     (94)
+  "#fadf7d", # bright yellow   (93)
+  "#a7cafc", # bright blue     (94)
   "#f5b5f4", # bright magenta  (95)
   "#b2ede5", # bright cyan     (96)
   "#fafae3", # bright white    (97)
