--- a/users/shared/features/kitty/kitty.conf
+++ b/users/shared/features/kitty/kitty.conf
@@ -5,22 +5,23 @@
 include themes/miami.conf
 # END_KITTY_THEME
 
-font_size 12.2
+font_size 12
 # font_family      JetBrainsMonoNL Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
-symbol_map U+AC00-U+D7AF NanumSquare Neo OTF
-cursor_trail 1
+cursor_trail 2
 macos_show_window_title_in none
 confirm_os_window_close 0
 
 # BEGIN_KITTY_FONTS
 hide_window_decorations yes
-font_family      family='JetBrainsMonoNL Nerd Font Mono' postscript_name=JetBrainsMonoNLNFM-ExtraLight
+font_family      family='JetBrainsMonoNL Nerd Font Mono' style=ExtraLight features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+symbol_map U+AC00-U+D7AF NanumSquare Neo OTF
+symbol_map U+E000-U+F8FF,U+F0000-U+FFFFF,U+100000-U+10ffff JetBrainsMonoNL Nerd Font
 # END_KITTY_FONTS
 
 # : Fonts {{{
