--- a/users/_common/app/kitty/kitty.conf
+++ b/users/_common/app/kitty/kitty.conf
@@ -10,6 +10,8 @@ font_size 12
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
+enable_audio_bell no
+
 cursor_trail 2
 macos_show_window_title_in none
 confirm_os_window_close 0
