--- a/shared/user/app/kitty/kitty.conf
+++ b/shared/user/app/kitty/kitty.conf
@@ -12,7 +12,7 @@ font_size 12
 # bold_italic_font auto
 enable_audio_bell no
 
-cursor_trail 2
+# cursor_trail 2
 macos_show_window_title_in none
 confirm_os_window_close 0
 
@@ -22,7 +22,7 @@ font_family      family='JetBrainsMonoNL Nerd Font Mono' style=ExtraLight featur
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-symbol_map U+AC00-U+D7AF NanumSquare Neo OTF
+symbol_map U+AC00-U+D7AF D2Coding
 symbol_map U+E000-U+F8FF,U+F0000-U+FFFFF,U+100000-U+10ffff JetBrainsMonoNL Nerd Font
 # END_KITTY_FONTS
 
