--- a/shared/user/app/kitty/kitty.conf
+++ b/shared/user/app/kitty/kitty.conf
@@ -12,7 +12,7 @@ font_size 12
 # bold_italic_font auto
 enable_audio_bell no
 
-# cursor_trail 2
+cursor_trail 2
 macos_show_window_title_in none
 confirm_os_window_close 0
 
