feat: update to 25.05

--- a/shared/user/app/kitty/kitty.conf
+++ b/shared/user/app/kitty/kitty.conf
@@ -18,13 +18,14 @@ confirm_os_window_close 0
 # resize_debounce_time 0.5 0.5
 
 # BEGIN_KITTY_FONTS
-hide_window_decorations yes
+hide_window_decorations titlebar-only
 font_family      family='JetBrainsMonoNL Nerd Font Mono' style=ExtraLight features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 symbol_map U+AC00-U+D7AF D2Coding
 symbol_map U+E000-U+F8FF,U+F0000-U+FFFFF,U+100000-U+10ffff JetBrainsMonoNL Nerd Font
+
 # END_KITTY_FONTS
 
 # : Fonts {{{
