fix: TERM variable for tmux

--- a/modules/features/shared/tmux/tmux.extra.conf
+++ b/modules/features/shared/tmux/tmux.extra.conf
@@ -1,14 +1,15 @@
 # ┌─────────┐ 
 # │ OPTIONS │ 
 # └─────────┘ 
-set -sa terminal-features ",wezterm:RGB"
-set -gq allow-passthrough "on"
-set -g  focus-events      "on"
-set -g  renumber-windows  "on"
-setw -g automatic-rename  "on"
-set -g  set-titles        "on"
-set -g  status-position   "top"
-set -s  set-clipboard     "on"
+set  -as terminal-features 'xterm-kitty:extkeys'
+set  -s  extended-keys on
+set  -gq allow-passthrough "on"
+set  -g  focus-events      "on"
+set  -g  renumber-windows  "on"
+setw -g  automatic-rename  "on"
+set  -g  set-titles        "on"
+set  -g  status-position   "top"
+set  -s  set-clipboard     "on"
 # setw -g monitor-activity  on
 
 # ┌─────────────┐ 
