--- a/modules/features/shared/kitty/kitty.conf
+++ b/modules/features/shared/kitty/kitty.conf
@@ -1,9 +1,6 @@
-# vim:fileencoding=utf-8:foldmethod=marker
+vim:fileencoding=utf-8:foldmethod=marker
 
-# BEGIN_KITTY_THEME
-# Miami
 include themes/miami.conf
-# END_KITTY_THEME
 
 font_size 12
 # font_family      JetBrainsMonoNL Nerd Font Mono
@@ -17,7 +14,6 @@ macos_show_window_title_in none
 confirm_os_window_close 0
 # resize_debounce_time 0.5 0.5
 
-# BEGIN_KITTY_FONTS
 hide_window_decorations titlebar-only
 font_family      family='JetBrainsMonoNL Nerd Font Mono' style=ExtraLight features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
 bold_font        auto
@@ -26,7 +22,8 @@ bold_italic_font auto
 symbol_map U+AC00-U+D7AF D2Coding
 symbol_map U+E000-U+F8FF,U+F0000-U+FFFFF,U+100000-U+10ffff JetBrainsMonoNL Nerd Font
 
-# END_KITTY_FONTS
+map ctrl+tab       send_text all \x1b[9;5u
+map ctrl+shift+tab send_text all \x1b[9;6u
 
 # : Fonts {{{
 
