fix: disable global zshrc due to an unexpected behavior

--- a/modules/features/shared/tmux/_files/tmux.extra.conf
+++ b/modules/features/shared/tmux/_files/tmux.extra.conf
@@ -4,6 +4,7 @@
 set  -as terminal-features 'xterm-kitty:extkeys'
 set  -s  extended-keys on
 set  -gq allow-passthrough "on"
+set      extended-keys-format csi-u
 set  -g  focus-events      "on"
 set  -g  renumber-windows  "on"
 setw -g  automatic-rename  "on"
