--- a/modules/features/shared/tmux/_files/tmux.extra.conf
+++ b/modules/features/shared/tmux/_files/tmux.extra.conf
@@ -1,7 +1,7 @@
 # ┌─────────┐ 
 # │ OPTIONS │ 
 # └─────────┘ 
-set  -as terminal-features 'xterm-kitty:extkeys'
+set  -as terminal-features 'xterm*:extkeys'
 set  -s  extended-keys on
 set  -gq allow-passthrough "on"
 set      extended-keys-format csi-u
