--- a/modules/features/shared/tmux/_files/tmux.extra.conf
+++ b/modules/features/shared/tmux/_files/tmux.extra.conf
@@ -21,6 +21,22 @@ unbind    s
 unbind    p
 unbind    C-c
 unbind -T copy-mode-vi Enter
+unbind    h
+unbind    j
+unbind    k
+unbind    l
+
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?\.?(view|n?vim?x?)(-wrapped)?(diff)?$'"
+
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' { if -F '#{pane_at_left}' '' 'select-pane -L' }
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' { if -F '#{pane_at_bottom}' '' 'select-pane -D' }
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' { if -F '#{pane_at_top}' '' 'select-pane -U' }
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' { if -F '#{pane_at_right}' '' 'select-pane -R' }
+
+bind-key -T copy-mode-vi 'C-h' if -F '#{pane_at_left}' '' 'select-pane -L'
+bind-key -T copy-mode-vi 'C-j' if -F '#{pane_at_bottom}' '' 'select-pane -D'
+bind-key -T copy-mode-vi 'C-k' if -F '#{pane_at_top}' '' 'select-pane -U'
+bind-key -T copy-mode-vi 'C-l' if -F '#{pane_at_right}' '' 'select-pane -R'
 
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
@@ -41,19 +57,21 @@ bind -T copy-mode-vi    escape          send -X cancel
 bind -r C-n next-window
 bind -r C-p previous-window
 
-bind - split-window -c "#{pane_current_path}" -v
-bind _ split-window -c "#{pane_current_path}" -h
-bind c new-window   -c "#{pane_current_path}"
+bind - split-window -c $PROJECT_ROOT -v
+bind _ split-window -c $PROJECT_ROOT -h
+
+# bspwm like tiling
+bind Enter if-shell "[ $(($(tmux display -p '8*#{pane_width}-20*#{pane_height}'))) -lt 0 ]" "splitw -v -c '#{pane_current_path}'" "splitw -h -c '#{pane_current_path}' "
+bind c new-window   -c $PROJECT_ROOT
 
 bind f resize-pane -Z
 bind v run-shell   -b "~/.config/tmux/scripts/new-nvim-buffer"
-bind i run-shell   -b "~/.config/tmux/scripts/new-session"
 bind s run-shell   -b "~/.config/tmux/scripts/switch-session"
 
 bind-key -n F12 if-shell -F '#{==:#{session_name},scratch}' {
 detach-client
 }{
-display-popup -w 60% -h 70% -E -B "tmux new -A -s scratch"
+display-popup -w 60% -h 70% -E -S -B "tmux new -A -s scratch"
 } 
 
 # ┌────────┐ 
@@ -64,7 +82,7 @@ set -g status-position "top"
 set -g status-style    "bg=default"
 set -g status-justify  "absolute-centre"
 
-# status left look and feel
+# status left style
 set -g  status-interval 1
 set -g  status-left-length 100
 
@@ -74,14 +92,14 @@ set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
 set -ga status-left "#[bg=default,fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
 set -ga status-left "#[bg=default,fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
 
-# status right look and feel
+# status right styles
 set -g  status-right-length 100
 set -g  status-right ""
 set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
 set -ga status-right "#[bg=default,fg=#{@thm_maroon}]  #{pane_current_command} "
 set -ga status-right "#[bg=default,fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
 
-# window look and feel
+# window styles
 set -wg automatic-rename "on"
 # set -g  automatic-rename-format "Window"
 
@@ -94,8 +112,12 @@ set -gF window-status-separator      "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
 set -g  window-status-current-format  " #I#{?#{!=:#{window_name},Window},: #W,} "
 set -g  window-status-current-style   "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
+# popup styles
+set -g popup-border-style "fg=#7ffa5c"
+set -g popup-style "bg=default"
+
 # Border
-set -g pane-active-border-style "bg=default,fg=#ddbaf7"
+set -g pane-active-border-style "bg=default,fg=#7ffa5c"
 set -g pane-border-style        "fg=#6a5b75"
 
 if-shell "test -e ~/.config/tmux/tmux.mutable.conf" \
