--- a/modules/features/shared/tmux/_files/projects/boj-cli.yml
+++ b/modules/features/shared/tmux/_files/projects/boj-cli.yml
@@ -1,9 +1,7 @@
 name: boj-cli
 root: ~/personal/boj-cli
 
+pre_window: tmux setenv PROJECT_ROOT ~/personal/boj-cli
 windows:
-  - editor:
-      layout: main-vertical
-      panes:
-        - editor:
-          - nvim
+  - main:
+    # No panes defined, so it starts with one pane
