--- a/modules/features/shared/kitty/_files/kitty.conf
+++ b/modules/features/shared/kitty/_files/kitty.conf
@@ -2,6 +2,10 @@ vim:fileencoding=utf-8:foldmethod=marker
 
 include themes/miami.conf
 
+# macos_show_window_title_in none
+# macos_hide_titlebar no
+hide_window_decorations titlebar-only
+
 font_size 12
 # font_family      JetBrainsMonoNL Nerd Font Mono
 # bold_font        auto
@@ -10,11 +14,9 @@ font_size 12
 enable_audio_bell no
 
 cursor_trail 2
-macos_show_window_title_in none
 confirm_os_window_close 0
 # resize_debounce_time 0.5 0.5
 
-hide_window_decorations titlebar-only
 font_family      family='JetBrainsMonoNL Nerd Font Mono' style=ExtraLight features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
 bold_font        auto
 italic_font      auto
